<resources>
    <string name="app_name">StoryApp</string>
    <string name="hint_login_image">Login Image</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_pass">Password</string>
    <string name="hint_login_button">Login</string>
    <string name="hint_login_tv">Need an account?</string>
    <string name="hint_login_tv2"><u>Register here</u></string>
    <string name="warn_pass">Password must have at least 6 characters</string>
    <string name="warn_email">Invalid email format</string>
    <string name="warn_name">Name cannot be empty</string>

    <string name="hint_register_image">Login Image</string>
    <string name="hint_register_name">Full Name</string>
    <string name="hint_register_button">Register</string>
    <string name="hint_register_tv">Have an account?</string>
    <string name="hint_register_tv2"><u>Log in</u></string>

    <string name="splash_title">Stories.</string>
    <string name="story_username">Username</string>
    <string name="story_img">Story Image</string>
    <string name="story_date">Datetime</string>
    <string name="story_desc">Description</string>
    <string name="hint_desc">Description</string>
    <string name="hint_post_button">Post</string>
    <string name="add_image">Add image</string>
    <string name="menu_language">Language</string>
    <string name="menu_logout">Log out</string>
    <string name="denied">Permission Denied</string>
    <string name="login_success">Login Success</string>
    <string name="login_failed">Login Failed</string>
    <string name="upload_success">File successfully uploaded</string>
    <string name="upload_failed">File cannot uploaded</string>
    <string name="capture_failed">Cannot capture image</string>
    <string name="camera_failed">Cannot open camera</string>
    <string name="register_success">Account registered</string>
    <string name="register_failed">Cannot create account</string>
    <string name="story_succes">Stories successfully loaded</string>
    <string name="story_failed">Cannot load stories</string>
    <string name="menu_map">Map</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="location_error">Location not found</string>
    <string name="location">Your location</string>
    <string name="map_key">AIzaSyBbYinNPesWWtoGdPpt4l7lpLACDdJYUvw</string>
    <string name="location_map">"Location: "</string>
    <string name="name_map">by</string>
    <string name="map_style_error">Map style error. Using default style</string>
    <string name="hint_latlng">Lat - Lon</string>
    <string name="hint_latlng_button">Get Location</string>
    <string name="add_post_location">Add Story with Location</string>
    <string name="story_location">Location</string>
    <string name="coordinate">"Coordinate: "</string>
    <string name="try_again">Try again</string>
    <string name="connection_timeout">Connection Timeout</string>

</resources>