<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:menuCategory="container">
        <item
            android:id="@+id/map_menu"
            android:title="@string/menu_map"
            android:icon="@drawable/ic_map"
            app:showAsAction="collapseActionView|always" />
        <item
            android:id="@+id/changeLang_menu"
            android:title="@string/menu_language"
            android:icon="@drawable/ic_language"
            app:showAsAction="collapseActionView|always" />
        <item
            android:id="@+id/logout_menu"
            android:title="@string/menu_logout"
            android:icon="@drawable/ic_logout"
            app:showAsAction="collapseActionView|always" />


    </group>
</menu>